@@ -1,5 +1,11 @@
 2019-11-05  Martin Liska  <mliska@suse.cz>
 
+	* tsan/Makefile.am: Rename tsan_interceptors.cpp to
+	tsan_interceptors_posix.
+	* tsan/Makefile.in: Regenerate.
+
+2019-11-05  Martin Liska  <mliska@suse.cz>
+
 	* all source files: Merge from upstream r375507.
 
 2019-10-22  Tamar Christina  <tamar.christina@arm.com>
